--- a/memoria/contido/introducion.tex
+++ b/memoria/contido/introducion.tex
@@ -1,18 +1,18 @@
 \chapter{Introducción}
 \label{chap:introducion}
 
-\lettrine{E}{l} constante progreso en medicina, y en particular en imagen médica, hace necesario contar con sistemas cada vez más avanzados para la representación y visualización de los datos obtenidos. El progreso en esta área ha sido patente en los últimos 30 años \cite{Botha2014}. Más recientemente, en esta búsqueda de métodos que sean capaces de explotar las mejoras tecnológicas, aparece la aplicación de la realidad aumentada (AR, por sus siglas en inglés) y de otras técnicas englobadas dentro de lo que se conoce como realidad extendida (XR, compendio de realidad virtual, aumentada y mixta) en la medicina \cite{Sielhorst2008}. Un uso efectivo de este tipo de tecnologías en el campo de la imagen médica supone un complemento de gran utilidad para muchas de las tareas del personal médico: diagnóstico, planificación preoperatoria, explicación a pacientes, cirugía guiada por imagen, formación médica, etc.
+\lettrine{E}{l} constante progreso en medicina, y en particular en imagen médica, hace necesario contar con sistemas cada vez más avanzados para la representación y visualización de los datos obtenidos. El progreso en esta área ha sido patente en los últimos 30 años \cite{Botha2014}. Más recientemente, en esta búsqueda de métodos que sean capaces de explotar las mejoras tecnológicas, aparece la aplicación de la \acrfull{ar} y de otras técnicas englobadas dentro de lo que se conoce como \acrfull{xr} en la medicina \cite{Sielhorst2008}. Un uso efectivo de este tipo de tecnologías en el campo de la imagen médica supone un complemento de gran utilidad para muchas de las tareas del personal médico: diagnóstico, planificación preoperatoria, explicación a pacientes, cirugía guiada por imagen, formación médica, etc.
 
 Este proyecto plantea el uso de piezas creadas con una impresora 3D a partir de imagen médica en un entorno de realidad aumentada, abordando la problemática de su detección y seguimiento para un correcto alineamiento con un modelo 3D virtual, con el objetivo de integrar una imagen sintética sobreimpresa en la imagen real capturada por la cámara.
 
 
 \section{Contexto y motivación}
 
-Varias son las razones que explican el actual auge en la aplicación de técnicas de XR en medicina. Por un lado, la superposición de información digital sobre imágenes reales facilita la visualización de datos médicos y su interpretación. Esta información extra ayuda al personal sanitario a tener una comprensión más clara y detallada de la anatomía de un paciente, lo que resulta especialmente útil tanto en las fases de diagnóstico como durante procedimientos quirúrgicos complejos, proporcionando información relevante en el campo de visión que sirve como guía en tiempo real durante una intervención. Además, la posibilidad de superponer modelos tridimensionales de estructuras anatómicas en el paciente facilita la planificación precisa de una cirujía, así como la comunicación con el paciente sobre el procedimiento. Por otro lado, la realidad extendida ofrece una herramienta efectiva para la educación y formación médica. Los estudiantes y profesionales sanitarios pueden utilizarla para practicar y simular procedimientos médicos en un entorno virtual realista antes de realizarlos en pacientes reales. Esto brinda la oportunidad de adquirir experiencia y habilidades sin riesgo para los pacientes.
+Varias son las razones que explican el actual auge en la aplicación de técnicas de \acrshort{xr} en medicina. Por un lado, la superposición de información digital sobre imágenes reales facilita la visualización de datos médicos y su interpretación. Esta información extra ayuda al personal sanitario a tener una comprensión más clara y detallada de la anatomía de un paciente, lo que resulta especialmente útil tanto en las fases de diagnóstico como durante procedimientos quirúrgicos complejos, proporcionando información relevante en el campo de visión que sirve como guía en tiempo real durante una intervención. Además, la posibilidad de superponer modelos tridimensionales de estructuras anatómicas en el paciente facilita la planificación precisa de una cirugía, así como la comunicación con el paciente sobre el procedimiento. Por otro lado, la realidad extendida ofrece una herramienta efectiva para la educación y formación médica. Los estudiantes y profesionales sanitarios pueden utilizarla para practicar y simular procedimientos médicos en un entorno virtual realista antes de realizarlos en pacientes reales. Esto brinda la oportunidad de adquirir experiencia y habilidades sin riesgo para los pacientes.
 
-En este proyecto proponemos el uso de piezas creadas con una impresora 3D a partir de imágenes médica en un entorno de realidad aumentada que permita superponer una imagen sintética (un \emph{render} 3D) sobre la visualización de la pieza en la imagen real capturada por la cámara. La idea fundamental es facilitar la manipulación de lo que podría ser una prótesis médica en un entorno de realidad extendida completo. Dentro de ese entorno, la pieza de AR desarrollada en este proyecto se encargaría de la correcta detección y seguimiento de la prótesis, junto a la integración de una imagen virtual superpuesta sobre la misma.
+En este proyecto proponemos el uso de piezas creadas con una impresora 3D a partir de imágenes médicas en un entorno de realidad aumentada que permita superponer una imagen sintética (un \emph{render} 3D) sobre la visualización de la pieza en la imagen real capturada por la cámara. La idea fundamental es facilitar la manipulación de lo que podría ser una prótesis médica en un entorno de realidad extendida completo. Dentro de ese entorno, la pieza de \acrshort{ar} desarrollada en este proyecto se encargaría de la correcta detección y seguimiento de la prótesis, junto a la integración de una imagen virtual superpuesta sobre la misma.
 
-Para el correcto seguimiento y alineación de una pieza física con su imagen virtual en un flujo de vídeo es preciso conocer los parámetros de la cámara y la posición de la misma respeto al objeto. Para la impresión puede extraerse un modelo 3D a partir de una \acrfull{tc}. Con el fin de facilitar el seguimiento es posible que sea preciso añadir marcadores de referencia sobre la pieza, para utilizarlas como guía. En el proyecto se cubrirá el flujo de trabajo completo, desde el análisis y la extracción de un modelo a partir de la \acrshort{tc}, pasando por el diseño de un marcador fiduciario que se usará para hacer el seguimiento del objeto, hasta la manipulación física de la pieza en un entorno de realidad aumentada en la que se proyectará un modelo virtual sobre la pieza impresa vista en imágenes reales.
+Para el correcto seguimiento y alineación de una pieza física con su imagen virtual en un flujo de vídeo es preciso conocer los parámetros de la cámara y la posición de la misma respecto al objeto. Para la impresión puede extraerse un modelo 3D a partir de una \acrfull{tc}. Con el fin de facilitar el seguimiento es posible que sea preciso añadir marcadores de referencia sobre la pieza, para utilizarlos como guía. En el proyecto se cubrirá el flujo de trabajo completo, desde el análisis y la extracción de un modelo a partir de la \acrshort{tc}, pasando por el diseño de un marcador fiduciario que se usará para hacer el seguimiento del objeto, hasta la manipulación física de la pieza en un entorno de realidad aumentada en la que se proyectará un modelo virtual sobre la pieza impresa vista en imágenes reales.
 
 \section{Objetivos}
 Los objetivos principales de este proyecto son:
@@ -25,3 +25,25 @@ Los objetivos principales de este proyecto son:
 \end{itemize}
 
 \section{Estructura de la memoria}
+
+Esta memoria se estructura en siete capítulos que abarcan desde los fundamentos teóricos hasta las conclusiones y trabajo futuro, complementados con dos apéndices técnicos.
+
+\textbf{Capítulo 1: Introducción}. Presenta el contexto del proyecto, la motivación que lo impulsa, los objetivos planteados y la estructura del documento.
+
+\textbf{Capítulo 2: Fundamentos Teóricos y Tecnológicos}. Establece las bases conceptuales necesarias para comprender el trabajo, cubriendo los principios de tomografía computarizada, impresión 3D, realidad extendida y visión artificial.
+
+\textbf{Capítulo 3: Estado del Arte}. Realiza una revisión de las soluciones existentes en el campo del seguimiento 3D y la realidad aumentada aplicada a imagen médica, analizando sus ventajas y limitaciones.
+
+\textbf{Capítulo 4: Herramientas y Software}. Describe en detalle las tecnologías, frameworks, librerías y herramientas hardware utilizadas en el desarrollo del proyecto, incluyendo OpenXR, OpenCV, ArUco, Assimp, y los equipos de impresión 3D empleados.
+
+\textbf{Capítulo 5: Metodología y Gestión del Proyecto}. Explica la metodología ágil implementada, la organización en sprints, la planificación temporal y la gestión de riesgos durante el desarrollo.
+
+\textbf{Capítulo 6: Ejecución del Proyecto}. Constituye el núcleo técnico del trabajo, detallando el proceso completo desde la extracción de volúmenes 3D a partir de TC, el diseño e impresión del marcador fiduciario cúbico, el desarrollo del algoritmo de seguimiento basado en ArUco, hasta la implementación de la aplicación independiente de realidad aumentada.
+
+\textbf{Capítulo 7: Conclusiones y Trabajo Futuro}. Evalúa el cumplimiento de los objetivos planteados, reflexiona sobre el enriquecimiento formativo del proyecto y propone líneas de desarrollo futuro.
+
+\textbf{Apéndice A: Detalles de Implementación}. Incluye el código fuente completo de las funciones clave, diagramas de flujo detallados y especificaciones técnicas de la implementación.
+
+\textbf{Apéndice B: Diagramas Detallados}. Contiene la planificación temporal completa del proyecto mediante diagramas de Gantt y la descripción detallada de todas las tareas realizadas.
+
+La memoria se complementa con un glosario de acrónimos y términos técnicos, así como una bibliografía completa que sustenta el trabajo realizado.
